# StockTracker

./: .dockerignore  .env.example  .gitattributes  .gitignore  .replit  CLEANUP_SUMMARY.md  DOCKER_EMAIL_UPDATE_SUMMARY.md  Dockerfile  EMAIL_SETUP.md  README.md  app.py  auth.py  docker-compose.prod.yml  docker-compose.registry.yml  docker-compose.yml  email_diagnostics.py  email_service.py  enhanced_app.py  nginx.conf  nginx.prod.conf  pyproject.toml  requirements.txt  run_tests.py  setup.py  start.bat  start.sh  streamlit_app.py  test_docker_email.py  test_email_service.py  test_imports.py  try_email.py  try_email_improved.py  users.json  verify_setup.py
.streamlit/: config.toml  secrets.toml.template
data/: stocks.db
docs/: DOCKER_USAGE.md  EMAIL_SETUP.md  api.md
scripts/: deploy-server.sh  deploy.sh  run-docker-email.sh  run-docker.sh
src/stock_tracker/: __init__.py  main.py
src/stock_tracker/config/: auth.py  settings.py
src/stock_tracker/models/: database.py  stock.py
src/stock_tracker/services/: email_service.py  prediction_service.py
src/stock_tracker/utils/: alert_system.py  email_diagnostics.py  email_test.py  portfolio.py  technical_analysis.py  try_email.py
tests/: test_database.py  test_email_service.py  test_portfolio.py  test_prediction_service.py  test_technical_analysis.py
